--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <img src="karabo.jpg" alt="Karabo Rantsieng" style="width:200px;height:auto;">
             <p>Hello, I'm Karabo Rantsieng. This is my first project as an aspiring web developer. I learned about things like front-end and back-end developers, as well as web and app developers, through my study. The field of front-end web development is my passion. I think it's fascinating and would like to learn more about developing dynamic and intuitive user experiences. I try to approach whatever I do with excitement and originality. You can find some of my projects, thoughts, and contact information on my page. I appreciate you coming by! </p>
         </section>
         <hr>
