--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karabo Rantsieng</title>
+    <title>Home | Karabo Rantsieng</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,7 +12,7 @@
        <h1> Welcome
         To
         Karabo Rantsieng</h1>
-        Personal Website 
+        Personal Portfolio 
     </header>
     <nav>
         <ul>
@@ -26,13 +26,13 @@
         <section id="about">
             <h2>About Me</h2>
             <img src="karabo.jpg" alt="Karabo Rantsieng" style="width:200px;height:auto;">
-            <p>Hello, I'm Karabo Rantsieng. This is my first project as an aspiring web developer. I learned about things like front-end and back-end developers, as well as web and app developers, through my study. The field of front-end web development is my passion. I think it's fascinating and would like to learn more about developing dynamic and intuitive user experiences. I try to approach whatever I do with excitement and originality. You can find some of my projects, thoughts, and contact information on my page. I appreciate you coming by! </p>
+            <p>Hello, I'm Karabo Rantsieng, an aspiring web developer. I am still learning coding and learning about web and app development. The field of web development is interesting to me as well as other fields like data science. I think it's fascinating and would like to learn more about developing dynamic and intuitive user experiences. I try to approach whatever I do with excitement and originality. You can find some of my projects and contact information below. I appreciate you stopping by! </p>
         </section>
         <hr>
         <section id="projects">
             <h2>Projects</h2>
-            <p>I have one project on you can check it out on:</p>
-            <p>karaborantsieng.github.io/karaborantsieng</p>
+            <p>I have projects on Github. You can check them out here:</p>
+            <p>karaborantsieng.github.io/</p>
         </section>
         <hr>
         <section id="contact">
